fix y-axis spacing

--- a/client/src/styles/scss/index.scss
+++ b/client/src/styles/scss/index.scss
@@ -39,7 +39,8 @@
 .app {
 	background-color: #444444;
 	padding: 40px;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 }
 
 
